@@ -2224,7 +2224,8 @@
 +<U01FE> <o-diaerisis>;<U01FF>;<CAP>;IGNORE
  <U00D5> <o-diaerisis>;<TIL>;<CAP>;IGNORE
  
- reorder-after <U016A>
+-reorder-after <U016A>
++reorder-after <U016B>
  <U0076> <v>;<U0056>;<BAS>;<MIN>
 -<U0056> <v>;<U0056>;<BAS>;<CAP>
  <U1E7D> <v>;<U0056>;<TIL>;<MIN>
@@ -2240,7 +2241,7 @@
  <U1E85> <w>;<U0057>;<REU>;<MIN>
 -<U1E84> <w>;<U0057>;<REU>;<CAP>
  <U1E87> <w>;<U0057>;<PCT>;<MIN>
-+reorder-after <U016B>
++reorder-after <U016A>
 +<U0056> <v>;<U0056>;<BAS>;<CAP>
 +<U1E7C> <v>;<U0056>;<TIL>;<CAP>
 +<U0057> <w>;<U0057>;<BAS>;<CAP>
