@@ -2,10 +2,12 @@ glibc (2.6.1-4) unstable; urgency=low
 
   * Disable any/local-ipv6-lookup.diff as it is causing breakages.
     Closes: bug#441857.
-  * any/local-sysmacros.diff: use __inline instead of inline for 
+  * any/local-sysmacros.diff: use __inline instead of inline for
     compatibility with ANSI.  Closes: #441959.
+  * patches/localedata/tailor-iso14651_t1.diff: correctly fix fi_FI 
+    locale.  Closes: bug#441026.
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 12 Sep 2007 17:28:09 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 12 Sep 2007 17:47:21 +0200
 
 glibc (2.6.1-3) unstable; urgency=low
 
